--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <title>Abigail Garcia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+        <nav class="navbar navbar-expand-lg bg-black" data-bs-theme="dark">
+            <div class="container">
+                <a class="navbar-brand" href="#">Abigail</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#">Habilidades</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Link</a>
@@ -46,9 +47,7 @@
                             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+
                     </form>
                 </div>
             </div>
@@ -59,7 +58,7 @@
     <main>
 
         <section id="presentacion">
-            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+            <div class="row flex-lg-row-reverse align-items-center g-5 py-5" >
                 <div class="col-10 col-sm-8 col-lg-6">
                     <img src="AA.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
                         height="500" loading="lazy">
@@ -68,11 +67,11 @@
                     <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Hola, soy Abigail</h1>
                     <p class="lead">Tengo 21 años y soy estudiante de Ciencias de la Computación en la Facultad de
                         Ciencias de la UNAM. Estoy buscando empleo en el área de desarrollo FrontEnd. Me apasiona crear
-                        interfaces intuitivas y atractivas, y estoy listo para aplicar mis conocimientos y habilidades
+                        interfaces intuitivas y atractivas, y estoy lista para aplicar mis conocimientos y habilidades
                         en un entorno profesional.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+                        <button type="button" class="btn btn-secondary btn-lg">Contactame</button>
+                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">abi.gs2003@gmail.com</button>
                     </div>
                 </div>
             </div>
