--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -27,12 +28,12 @@
                             <a class="nav-link active" aria-current="page" href="#">Habilidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">Testimonios</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Dropdown
+                                Proyectos
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
@@ -40,11 +41,11 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">Proyectos</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                            <a class="nav-link disabled" aria-disabled="true">Contacto</a>
                         </li>
                     </ul>
 
@@ -86,15 +87,14 @@
                     <div class="col d-flex align-items-start">
                         <div
                             class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                            <svg class="bi" width="1em" height="1em">
+                            <i class="bi bi-archive"></i>
                                 <use xlink:href="#toggles2"></use>
                             </svg>
                         </div>
                         <div>
-                            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-                            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with
-                                another
-                                sentence and probably just keep going until we run out of words.</p>
+                            <h3 class="fs-2 text-body-emphasis">Bases de datos</h3>
+                            <p>pues le se mucho a eso y asi
+                            </p>
                             <a href="#" class="btn btn-primary">
                                 Primary button
                             </a>
@@ -103,15 +103,13 @@
                     <div class="col d-flex align-items-start">
                         <div
                             class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                            <svg class="bi" width="1em" height="1em">
+                            <i class="bi bi-filetype-html"></i>
                                 <use xlink:href="#cpu-fill"></use>
                             </svg>
                         </div>
                         <div>
-                            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-                            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with
-                                another
-                                sentence and probably just keep going until we run out of words.</p>
+                            <h3 class="fs-2 text-body-emphasis">Desarrollo web fullstack</h3>
+                            <p>tambien le se tambien le se, lo juro </p>
                             <a href="#" class="btn btn-primary">
                                 Primary button
                             </a>
@@ -120,15 +118,14 @@
                     <div class="col d-flex align-items-start">
                         <div
                             class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                            <svg class="bi" width="1em" height="1em">
+                            <i class="bi bi-android2"></i>
                                 <use xlink:href="#tools"></use>
                             </svg>
                         </div>
                         <div>
-                            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-                            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with
-                                another
-                                sentence and probably just keep going until we run out of words.</p>
+                            <h3 class="fs-2 text-body-emphasis">Desarrollo movil</h3>
+                            <p>Psisisis
+                            </p>
                             <a href="#" class="btn btn-primary">
                                 Primary button
                             </a>
