--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
 
         <section id="proyectos">
             <div class="container px-4 py-5" id="custom-cards">
-                <h2 class="pb-2 border-bottom">Custom cards</h2>
+                <h2 class="pb-2 border-bottom">Proyectos que he desarrollado</h2>
 
                 <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
                     <div class="col">
                         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
                             style="background-image: url('unsplash-photo-1.jpg');">
                             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Short title, long jacket</h3>
+                                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Miren este proyecto q lindo</h3>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="me-auto">
                                         <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
@@ -154,7 +154,7 @@
                                         <svg class="bi me-2" width="1em" height="1em">
                                             <use xlink:href="#geo-fill"></use>
                                         </svg>
-                                        <small>Earth</small>
+                                        <small>Proyecto de desarrollo web</small>
                                     </li>
                                     <li class="d-flex align-items-center">
                                         <svg class="bi me-2" width="1em" height="1em">
@@ -171,8 +171,7 @@
                         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
                             style="background-image: url('unsplash-photo-2.jpg');">
                             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Much longer title that wraps to
-                                    multiple lines</h3>
+                                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Super genial proyecto</h3>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="me-auto">
                                         <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
@@ -199,7 +198,7 @@
                         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
                             style="background-image: url('unsplash-photo-3.jpg');">
                             <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-                                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Another longer title belongs here</h3>
+                                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Otro lindo proyecto</h3>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="me-auto">
                                         <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
@@ -209,7 +208,7 @@
                                         <svg class="bi me-2" width="1em" height="1em">
                                             <use xlink:href="#geo-fill"></use>
                                         </svg>
-                                        <small>California</small>
+                                        <small>Bases de datos</small>
                                     </li>
                                     <li class="d-flex align-items-center">
                                         <svg class="bi me-2" width="1em" height="1em">
@@ -245,9 +244,8 @@
                         <div class="container">
                             <div class="carousel-caption text-start">
                                 <h1>Example headline.</h1>
-                                <p class="opacity-75">Some representative placeholder content for the first slide of the
-                                    carousel.</p>
-                                <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+                                <p class="opacity-75">ABi es genial.</p>
+                                <p><a class="btn btn-lg btn-primary" href="#">Bill Gates</a></p>
                             </div>
                         </div>
                     </div>
@@ -258,9 +256,9 @@
                         </svg>
                         <div class="container">
                             <div class="carousel-caption">
-                                <h1>Another example headline.</h1>
-                                <p>Some representative placeholder content for the second slide of the carousel.</p>
-                                <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                                <h1>Abi deberia trabajar en Google</h1>
+                                <p>Abi deberia trabajar en Google</p>
+                                <p><a class="btn btn-lg btn-primary" href="#">Creador de google</a></p>
                             </div>
                         </div>
                     </div>
@@ -272,8 +270,8 @@
                         <div class="container">
                             <div class="carousel-caption text-end">
                                 <h1>One more for good measure.</h1>
-                                <p>Some representative placeholder content for the third slide of this carousel.</p>
-                                <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+                                <p>Abi me inspiró.</p>
+                                <p><a class="btn btn-lg btn-primary" href="#">Jesus</a></p>
                             </div>
                         </div>
                     </div>
@@ -300,15 +298,15 @@
 
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
 
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Redes sociales</a></li>
 
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
 
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contacto</a></li>
 
             </ul>
 
-            <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+            <p class="text-center text-body-secondary">© 2024 Abi, Inc</p>
 
         </div>
 
