--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <p>pues le se mucho a eso y asi
                             </p>
                             <a href="#" class="btn btn-primary">
-                                Primary button
+                               boton
                             </a>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
                             <h3 class="fs-2 text-body-emphasis">Desarrollo web fullstack</h3>
                             <p>tambien le se tambien le se, lo juro </p>
                             <a href="#" class="btn btn-primary">
-                                Primary button
+                                boton
                             </a>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                             <p>Psisisis
                             </p>
                             <a href="#" class="btn btn-primary">
-                                Primary button
+                               boton
                             </a>
                         </div>
                     </div>
